// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fret component defaultContext, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
    status="oct2"
  >
    <Content
      content="E2"
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component note is selected, showOctaves=false, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
    status="selected"
  >
    <Content
      content="E2"
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component showSelection=false, note is selected, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
    status="selected"
  >
    <Content
      content="E2"
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component type=strings, showNotes-false, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
    status="oct2"
  />
</styled.div>
`;
